src/test/deca/context/invalid/created/return/return_double_void.deca
// Description :
//    test double return avec void
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: 

class a{
void met(){
void a = ;
return a;return a;}
}
